# minimal_color_list

./: README.md  meson.build
source/: main.vala
